--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     <section id="social">
         <h2>Find Me on Social Media</h2>
         <div>
-            <a href="https://www.linkedin.com/in/username" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/username" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.instagram.com/username" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/jean-paul-denata-663523223/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/2denata" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/denatajp" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </section>
 
