--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
             <button class="feed-tab" data-feed="github">GitHub</button>
         </div>
         <div id="instagramFeed" class="feed-content active">
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-52bf3d4a-02a1-4025-8bb8-0e7a4c9ab25b" data-elfsight-app-lazy></div>
+<!--             <div class="feed-item"><img src="https://via.placeholder.com/150" alt="Instagram Post"></div>
             <div class="feed-item"><img src="https://via.placeholder.com/150" alt="Instagram Post"></div>
-            <div class="feed-item"><img src="https://via.placeholder.com/150" alt="Instagram Post"></div>
-            <div class="feed-item"><img src="https://via.placeholder.com/150" alt="Instagram Post"></div>
+            <div class="feed-item"><img src="https://via.placeholder.com/150" alt="Instagram Post"></div> -->
         </div>
         <div id="githubFeed" class="feed-content">
             <div class="feed-item">
