--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
             <!-- Elfsight Instagram Feed | Untitled Instagram Feed -->
             <script src="https://static.elfsight.com/platform/platform.js" async></script>
             <div class="elfsight-app-52bf3d4a-02a1-4025-8bb8-0e7a4c9ab25b" data-elfsight-app-lazy></div>
+        </div>
         <div id="githubFeed" class="feed-content">
             <div class="feed-loader">
-                <i class="fas fa-spinner fa-spin"></i> Initializing repository scan...
+            <i class="fas fa-spinner fa-spin"></i> Initializing repository scan...
             </div>
-            
+
         </div>
     </section>
 
