--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jean Paul Denata | Network Enthusiast</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/@coreui/coreui@5.3.1/dist/css/coreui.min.css" rel="stylesheet" integrity="sha384-PDUiPu3vDllMfrUHnurV430Qg8chPZTNhY8RUpq89lq22R3PzypXQifBpcpE1eoB" crossorigin="anonymous">
     <link type="image/png" sizes="16x16" rel="icon" href="/fav/web/fav.png">
     <link type="image/png" sizes="32x32" rel="icon" href="/fav/web/fav-32.png">
     <link type="image/png" sizes="96x96" rel="icon" href="/fav/web/fav-96.png">
@@ -120,10 +121,13 @@
     <section id="social">
         <h2>Find Me on Social Media</h2>
         <div>
-            <a href="https://www.linkedin.com/in/jean-paul-denata-663523223/" target="_blank"><i
+            <a href="https://www.linkedin.com/in/denata" target="_blank"><i
                     class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/2denata" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/denatajp" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/denatajp" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.hackerrank.com/profile/denatajp" target="_blank"><i class="fa-brands fa-hackerrank"></i></a>
+            <a href="https://leetcode.com/u/denatajp" target="_blank"><i class="cib-leetcode"></i></a>
+            
         </div>
     </section>
 
