--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Profile Section (Foto Formal) -->
     <section id="profile">
         <div class="profile-photo">
-            <img src="/img/foto.jpg" alt="Foto Formal">
+            <img src="/img/pp.jpg" alt="Foto Formal">
         </div>
         <div class="profile-info">
             <h2>Jean Paul Denata</h2>
