--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
         <div class="profile-photo">
             <img src="/img/pp.jpg" alt="Foto Formal">
         </div>
-        <div class="profile-info">
+        <!-- <div class="profile-info">
             <h2>Jean Paul Denata</h2>
             <p>A Computer Science student at Sanata Dharma University with a strong focus on Networking, particularly
                 Delay Tolerant Networks. Passionate about exploring new programming languages and diverse work
                 environments to broaden technical expertise and adaptability</p>
+        </div> -->
+        <div class="profile-info">
+            <h2>Jean Paul Denata</h2>
+            <p id="typed-text" class="typing"></p>
         </div>
     </section>
 
