--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="cyber-terminal collapsed">
             <div class="terminal-header">
                 <span class="led"></span>
-                > SYSTEM TERMINAL v2.3.1
+                > NAT'S TERMINAL v2.3
             </div>
             <div class="terminal-body">
                 <div id="terminal-output"></div>
